--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,35 @@
-<app-sign-up></app-sign-up>
-<router-outlet></router-outlet>
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <a class="navbar-brand m-3" href="#">Navbar</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#" routerLink="/signup">Sign Up </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="#" tabindex="-1" routerLink="/login"
+          >Log in</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" tabindex="-1" routerLink="/dataViwe"
+          >Data View</a
+        >
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="container-fluid mt-5">
+  <router-outlet></router-outlet>
+</div>
