--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,3 +2,17 @@ input {
     border-radius: 12px;
     margin-bottom: 1rem;
   }
+
+
+    /* OTHERS */
+  
+    form {
+      background-color: #ffffff;
+      margin: 50px auto 10px auto;
+      padding: 30px;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 10px -3px #333;
+      margin: auto;
+    
+    }
