--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -10,4 +10,15 @@ input {
     font-family: 'Cairo', sans-serif;
   }
   
+    /* OTHERS */
   
+    form {
+      background-color: #ffffff;
+      margin: 50px auto 10px auto;
+      padding: 30px;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 10px -3px #333;
+      margin: auto;
+    
+    }
