add sign up with Gmail and facebook

--- a/src/app/dataview/dataview.component.html
+++ b/src/app/dataview/dataview.component.html
@@ -52,9 +52,11 @@
         <option [ngValue]="2">2 items per page</option>
         <option [ngValue]="4">4 items per page</option>
         <option [ngValue]="6">6 items per page</option>
+        <option [ngValue]="8">8 items per page</option>
+        <option [ngValue]="10">10 items per page</option>
       </select>
       <ngb-pagination
-        [collectionSize]="4"
+        [collectionSize]="6"
         [(page)]="page"
         [pageSize]="1"
         (pageChange)="refreshUsers()"
