--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -16,3 +16,12 @@ input {
       margin: auto;
     
     }
+
+    .container {
+      margin-top: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    
