--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,8 +1,13 @@
 <section>
-  <div class="container mt-5">
+  <div class="container mt-3">
     <div class="row">
       <div class="col-md-8 offset-md-2">
-        <form lang="ar" dir="rtl">
+        <form
+          lang="ar"
+          dir="rtl"
+          (ngSubmit)="onSignUp()"
+          [formGroup]="signUpForm"
+        >
           <p class="text-body text-center">تســجيل جـديـد</p>
 
           <!--  Name Row -->
@@ -12,9 +17,10 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="name"
+                  name="firstName"
                   placeholder="الاسم الأول"
                   required
+                  formControlName="firstName"
                 />
               </div>
             </div>
@@ -23,8 +29,9 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="name"
+                  name="lastName"
                   placeholder="الاسم الأخير"
+                  formControlName="lastName"
                 />
               </div>
             </div>
@@ -36,21 +43,23 @@
                 <input
                   type="tel"
                   class="form-control"
-                  id="name"
+                  name="phoneNumber"
                   placeholder="رقم الجوال"
                   required
                   autocomplete="off"
+                  formControlName="phoneNumber"
                 />
               </div>
             </div>
             <div class="col-xs-12 col-sm-6">
               <div class="form-group">
                 <input
-                  type="text"
+                  type="email"
                   class="form-control"
-                  id="email"
+                  name="Email"
                   placeholder="example@email.com"
                   required
+                  formControlName="Email"
                 />
               </div>
             </div>
@@ -61,25 +70,28 @@
             <input
               type="password"
               class="form-control"
-              id="password"
+              name="password"
               placeholder="ادخل كلمة المرور"
               required
+              formControlName="Password"
+
             />
           </div>
           <div class="form-group">
             <input
               type="password"
               class="form-control"
-              id="confirm_password"
+              name="confirm_password"
               placeholder="ادخل تأكيد كلمة المرور"
               required
+              formControlName="confirm_password"
+
             />
           </div>
           <div class="form-check">
             <input
               class="form-check-input"
               type="checkbox"
-              value=""
               id="termsCheckbox"
               required
             />
@@ -94,7 +106,12 @@
           </div>
           <div class="row">
             <div class="col-12 text-center mb-3">
-              <button type="submit" class="btn btn-success mt-4">تسجيل</button>
+              <button
+                type="submit"
+                class="btn btn-success mt-4"
+              >
+                تسجيل
+              </button>
             </div>
           </div>
           <div class="row">
@@ -116,14 +133,29 @@
             <p class="text-muted">او التسجيل من خلال</p>
             <div class="row">
               <div class="col-6">
-                <div class="google_signin">
-                    <button  (click)="login()">
-                        <asl-google-signin-button type="standard" size="large"> </asl-google-signin-button>
-                    </button>
-
+                <div class="form-group">
+                  <button
+                    type="button"
+                    class="btn btn-danger btn-block"
+                    (click)="GoogleAuthSignUp()"
+                  >
+                    Sign Up with Google
+                  </button>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group">
+                  <button
+                    type="button"
+                    class="btn btn-primary btn-block"
+                    (click)="signInWithFB()"
+                  >
+                    Sign Up with Facebook
+                  </button>
                 </div>
               </div>
             </div>
+            <!-- row -->
           </div>
         </form>
       </div>
