add search in data table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" tabindex="-1" routerLink="/dataViwe"
+        <a class="nav-link" href="#" tabindex="-1" routerLink="/dataView"
           >Data View</a
         >
       </li>
