--- a/src/app/dataview/dataview.component.html
+++ b/src/app/dataview/dataview.component.html
@@ -1,67 +1,82 @@
-<div class="row">
-  <div class="col-md-8 offset-2">
-    <p>
-      You can bind our <code>NgbPagination</code> component with slicing the
-      data list
-    </p>
-    <form>
-      <div class="mb-3 row">
-        <label
-          for="table-filtering-search"
-          class="col-xs-3 col-sm-auto col-form-label"
-          >Full text search:</label
-        >
-        <div class="col-xs-3 col-sm-auto">
-          <input
-            id="table-filtering-search"
-            class="form-control"
-            type="text"
-            [formControl]="filter"
-          />
-        </div>
-      </div>
-    </form>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th scope="col">ID</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-          <th scope="col">Phone Number</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of dataViwe">
-          <td>
-            {{ item.userID }}
-          </td>
-          <td>{{ item.firstName }}</td>
-          <td>{{ item.lastName }}</td>
-          <td>{{ item.phoneNumber }}</td>
-        </tr>
-      </tbody>
-    </table>
 
-    <div class="d-flex justify-content-between p-2">
-      <select
-        class="form-select"
-        style="width: auto"
-        [(ngModel)]="pageSize"
-        (ngModelChange)="refreshUsers()"
-      >
-        <option [ngValue]="2">2 items per page</option>
-        <option [ngValue]="4">4 items per page</option>
-        <option [ngValue]="6">6 items per page</option>
-        <option [ngValue]="8">8 items per page</option>
-        <option [ngValue]="10">10 items per page</option>
-      </select>
-      <ngb-pagination
-        [collectionSize]="6"
-        [(page)]="page"
-        [pageSize]="1"
-        (pageChange)="refreshUsers()"
-      >
-      </ngb-pagination>
+<div class="container">
+  <div class="row">
+    <div class="col-8 offset-2">
+
+
+      <form>
+        <div class="mb-3 row">
+          <label
+            for="table-filtering-search"
+            class="col-xs-3 col-sm-auto col-form-label"
+            >Full text search:</label
+          >
+          <div class="col-xs-3 col-sm-auto">
+            <input
+              id="table-filtering-search"
+              class="form-control"
+              type="text"
+              [formControl]="filter"
+            />
+          </div>
+        </div>
+      </form>
+      
+      <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Country</th>
+            <th scope="col">Area</th>
+            <th scope="col">Population</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of dataViwe; index as i">
+            <th scope="row">{{ i + 1 }}</th>
+            <td>
+              <ngb-highlight
+                [result]="item.firstName"
+                [term]="filter.value"
+              ></ngb-highlight>
+            </td>
+            <td>
+              <ngb-highlight
+                [result]="item.phoneNumber"
+                [term]="filter.value"
+              ></ngb-highlight>
+            </td>
+            <td>
+              <ngb-highlight
+                [result]="item.Email"
+                [term]="filter.value"
+              ></ngb-highlight>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="d-flex justify-content-between p-2">
+        <select
+          class="form-select"
+          style="width: auto"
+          [(ngModel)]="pageSize"
+          (ngModelChange)="refreshUsers()"
+        >
+          <option [ngValue]="2">2 items per page</option>
+          <option [ngValue]="4">4 items per page</option>
+          <option [ngValue]="6">6 items per page</option>
+          <option [ngValue]="8">8 items per page</option>
+          <option [ngValue]="10">10 items per page</option>
+        </select>
+        <ngb-pagination
+          [collectionSize]="6"
+          [(page)]="page"
+          [pageSize]="1"
+          (pageChange)="refreshUsers()"
+        >
+        </ngb-pagination>
+      </div>
+      
     </div>
   </div>
 </div>
